--- a/README
+++ b/README
@@ -35,7 +35,7 @@ Does that traffic seem legitimate?
 Yes, most of the traffic are the apps/websites I used during the week. Since I used
 iphone for testing, there are many traffic goes through Apple, such as App store and 
 IMessage. Also during the peroid I used goole and gmail frequently. 
-Thus it is not surprising that most of the traffic were from Apple and Google.
+It is not surprised that most of the traffic were from Apple and Google.
 
 Is there anything surprising in your data?
 I'm pretty surprised that Akamai provided a large amount of traffic during the 
